Improved ListItem layout with play icons

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,5 +15,7 @@
 <resources>
     <!-- Height and of each list item -->
     <dimen name="list_item_dimensions">88dp</dimen>
+    <!-- Height and of word -->
+    <dimen name="list_item_word">44dp</dimen>
 
 </resources>
