--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,19 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/tan_background"
     android:minHeight="@dimen/list_item_dimensions"
-    android:orientation="horizontal"
-    android:background="@color/tan_background">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/image"
-        style="@style/ListItemImageStyle"/>
+        style="@style/ListItemImageStyle" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/text_container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:paddingLeft="16dp">
 
         <TextView
@@ -27,6 +26,10 @@
             style="@style/DefaultTextStyle"
             android:text="@string/category_colors" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/play_icon"
+            style="@style/PlayIconStyle"
+            android:src="@drawable/ic_play_arrow" />
 
+    </RelativeLayout>
 </LinearLayout>
