--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,5 +64,11 @@
         <item name="android:layout_marginRight">16dp</item>
     </style>
 
+    <style name="TabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/category_text</item>
+        <item name="tabSelectedTextColor">@color/category_text</item>
+        <item name="tabTextColor">@color/tab_text</item>
+        <item name="tabBackground">@color/primary_color</item>
+    </style>
 
 </resources>
